plugins {
    // add springboot support
    id 'org.springframework.boot' version '2.3.5.RELEASE'
    // automatic dependency search ~no need to specify version it uses springboot version
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'java'
}

group 'org.augusto'
version '1.0-SNAPSHOT'

// defines which source code constructs are allowed
sourceCompatibility = '11'
// defines the generated JVM bytecode version
targetCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    // Spring dependencies
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //DB dependencies
    runtimeOnly 'mysql:mysql-connector-java'

    //hibernate validations
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'

    //email
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail'

    //html for email
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'

    //token jwt
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'

}
